remove solutions from notebooks

--- a/content/05_geodemographic_analysis.ipynb
+++ b/content/05_geodemographic_analysis.ipynb
@@ -788,37 +788,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load solutions/05.py\n",
-    "##### 1)\n",
-    "\n",
-    "# create orange county data\n",
-    "oc = scag[scag.geoid.str[:5] == '06059']\n",
-    "\n",
-    "# create cluster models where k==5,8\n",
-    "oc5 = KMeans(n_clusters=5).fit(scaler.fit_transform(oc[columns]))\n",
-    "oc8 = KMeans(n_clusters=8).fit(scaler.fit_transform(oc[columns]))\n",
-    "\n",
-    "# calculate silhouette coefs and print them\n",
-    "sil5 = silhouette_score(scaler.fit_transform(oc[columns]), oc5.labels_)\n",
-    "sil8 = silhouette_score(scaler.fit_transform(oc[columns]), oc8.labels_)\n",
-    "\n",
-    "print(f'5-cluster solution: {sil5}')\n",
-    "print(f'8-cluster solution: {sil8}')\n",
-    "\n",
-    "\n",
-    "##### 2)\n",
-    "\n",
-    "rside = scag[scag.geoid.str[:5] == '06065']\n",
-    "\n",
-    "rside['affprop'] = AffinityPropagation(damping=0.8, preference=-100,).fit(scaler.fit_transform(rside[columns])).labels_\n",
-    "print(f'There are {len(rside.affprop.unique())} unique clusters in Riverside')\n",
-    "\n",
-    "print(f\"The average home price in cluster 3 is ${rside.groupby('affprop').mean()['median_home_value'][3].astype(int)}\")\n",
-    "\n",
-    "##### 3)\n",
-    "\n",
-    "print(\"With distance band weights, the solution will be spatially-influenced but the clusters are not guaranteed to be contiguous\")\n",
-    "\n"
+    "# %load solutions/05.py"
    ]
   },
   {
